DPO-1603 Mobiilisti REST-apien ääkköset eivät toimi